removed: VNC password

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -22,13 +22,12 @@ stdout_logfile=/var/log/supervisor/fluxbox.log
 stderr_logfile=/var/log/supervisor/fluxbox.log
 
 [program:x11vnc]
-command=x11vnc -forever -usepw -shared -rfbauth /home/agent/.vnc/passwd -rfbport 5900 -display :1
-user=agent
-environment=DISPLAY=":1"
+command=x11vnc -display :0 -nopw -forever -shared
 autostart=true
 autorestart=true
+user=agent
 stdout_logfile=/var/log/supervisor/x11vnc.log
-stderr_logfile=/var/log/supervisor/x11vnc.log
+stderr_logfile=/var/log/supervisor/x11vnc_err.log
 
 [program:novnc]
 command=python3 /opt/novnc/utils/websockify/websockify.py --web /opt/novnc 6080 localhost:5900
