--- a/nginx.conf
+++ b/nginx.conf
@@ -6,12 +6,10 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # Main server block - serves on Railway's PORT
     server {
-        listen 8000;
+        listen ${PORT};
         server_name _;
 
-        # Root path serves the API
         location / {
             proxy_pass http://127.0.0.1:5000;
             proxy_set_header Host $host;
@@ -20,7 +18,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # API routes (explicit routing for clarity)
         location /schedule {
             proxy_pass http://127.0.0.1:5000/schedule;
             proxy_set_header Host $host;
@@ -37,7 +34,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # noVNC interface
         location /vnc/ {
             proxy_pass http://127.0.0.1:6080/;
             proxy_http_version 1.1;
@@ -49,21 +45,18 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Jupyter Lab interface
         location /jupyter/ {
             proxy_pass http://127.0.0.1:8888/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # WebSocket support for Jupyter
+
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
 
-        # Static files for noVNC
         location /novnc/ {
             alias /opt/novnc/;
             try_files $uri $uri/ =404;
